Removed an unnecessary Integer instantiation in a boolean test.